--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-leaflet/core": "^2.1.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,15 +24,19 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "dotenv": "^16.3.1",
+    "embla-carousel-react": "^8.0.0-rc14",
     "leaflet-providers": "^2.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
+    "vaul": "^0.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
